--- a/W3schools-html/02-html-editors/editors.html
+++ b/W3schools-html/02-html-editors/editors.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Editors page</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph. By using note pad or notepad ++ we can edit HTML files.</p>
+<h1>Learn HTML Using Notepad or TextEdit</h1>
+<p>Open Start > Programs > Accessories > Notepad<br>Open Finder > Applications > TextEdit<br> Save filename with extention .html</p>
 
 </body>
 </html>
