--- a/W3schools-html/03-basics/basic.html
+++ b/W3schools-html/03-basics/basic.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html>
+<title>HTML basic example</title>
 <body>
+<h1> some basic tag notations will define</h1>
+<h2> P for paragragh<br>img for image<br> a for anchor to define link<br> heading tags h1 to h6</h2>
+<h3>Heading tags</h3>
+<ol>
+<li>h1</li>
+<li>h2</li>
+<li>h3</li>
+<li>h4</li>
+<li>h5</li>
+<li>h6</li>
+</ol>
+<p>The <b>!DOCTYPE</b> declaration represents the document type, and helps browsers to display web pages correctly.<br>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+It must only appear once, at the top of the page</p>
 
-All HTML documents must start with a document type declaration: <!DOCTYPE html>.
-
-The HTML document itself begins with <html> and ends with </html>.
-
-The visible part of the HTML document is between <body> and </body>.
 </body>
 </html>
