--- a/W3schools-html/04-Elements/elements.html
+++ b/W3schools-html/04-Elements/elements.html
@@ -5,9 +5,17 @@
 <h1>My First Elements Example</h1>
 <p>My first paragraph.</p>
 
-HTML Elements
-The HTML element is everything from the start tag to the end tag:
+HTML Elements<br>
+The HTML element is everything from the start tag to the end tag:<br>
 
 <tagname>Content goes here...</tagname>
+<br>
+<h2>Never Skip the End Tag</h2>
+
+Empty HTML Elements
+<ol>
+<li>break tag</li>
+<li> hr tag</li>
+</ol>
 </body>
 </html>
