--- a/W3schools-html/07-Paragraphs/paragraph.html
+++ b/W3schools-html/07-Paragraphs/paragraph.html
@@ -8,10 +8,10 @@ A paragraph always starts on a new line, and browsers automatically add some whi
 <p>This is a paragraph.</p>
 <p>This is another paragraph.</p>
 
-HTML Line Breaks
-The HTML <br> element defines a line break.
+HTML Line Breaks<br>
+The HTML <b>br</b> element defines a line break.
 
-Use <br> if you want a line break (a new line) without starting a new paragraph:
+Use <b>br</b> <br> if you want a line break (a new line) without starting a new paragraph:
 <p>This is<br>a paragraph<br>with line breaks.</p>
 
 </body>
