--- a/W3schools-html/05-Attributes/attributes.html
+++ b/W3schools-html/05-Attributes/attributes.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>
-The lang Attribute
-You should always include the lang attribute inside the <html> tag, to declare the language of the Web page. This is meant to assist search engines and browsers.
+<h1>My First Attributes Example</h1><hr>
 
-<h1>My First Attributes Example</h1>
-<p>My first paragraph.</p>
+The lang Attribute<br>
+You should always include the lang attribute inside the html> tag, to declare the language of the Web page. This is meant to assist search engines and browsers.<hr>
 
-The href Attribute
-The <a> tag defines a hyperlink. The href attribute specifies the URL of the page the link goes to:
-<a href="https://www.w3schools.com">Visit W3Schools</a>
+The href Attribute<br>
+The <a> tag defines a hyperlink. The href attribute specifies the URL of the page the link goes to:<br>
+<a href="https://www.w3schools.com">Visit W3Schools</a><hr>
 
-The src Attribute
-The <img> tag is used to embed an image in an HTML page. The src attribute specifies the path to the image to be displayed:
-<img src="img_girl.jpg" width="500" height="600">
+The src Attribute<br>
+The <img> tag is used to embed an image in an HTML page. The src attribute specifies the path to the image to be displayed:<br>
+<img src="java.jfif" width="200" height="100"><hr>
 
-The title Attribute
-The title attribute defines some extra information about an element.
+The title Attribute<br>
+The title attribute defines some extra information about an element.<br>
 
-The value of the title attribute will be displayed as a tooltip when you mouse over the element:
+The value of the title attribute will be displayed as a tooltip when you mouse over the element:<br>
 <p title="I'm a tooltip">This is a paragraph.</p>
 
 </body>
